# skiena

./: .gitignore  .gitmodules  CMakeLists.txt
chapter1/1-30/: CMakeLists.txt  tsp-heuristics-bench.cpp  tsp-heuristics-testsuits.cpp  tsp-heuristics.cpp  tsp-heuristics.hpp
chapter1/1-32/: CMakeLists.txt  integer-division-testsuit.cpp  integer-division.cpp  integer-division.hpp
chapter3/3-1/: CMakeLists.txt  correct-parantheses-testsuit.cpp  correct-parantheses.cpp  correct-parantheses.hpp
chapter3/3-15/: CMakeLists.txt  transform-balanced-tree-testsuit.cpp  transform-balanced-tree.hpp
chapter3/3-16/: solution.md
chapter3/3-17/: CMakeLists.txt  check-height-balance-testsuit.cpp  check-height-balance.hpp
chapter3/3-18/: solution.md
chapter3/3-19/: solution.md
chapter3/3-20/: solution.md
chapter3/3-21/: solution.md
chapter3/3-22/: solution.md
chapter3/3-23/: solution.md
chapter3/3-3/: CMakeLists.txt  reverse-linked-list-testsuit.cpp  reverse-linked-list.cpp  reverse-linked-list.hpp
chapter3/3-4/: CMakeLists.txt  stack-implementation-testsuit.cpp  stack-implementation.hpp
chapter3/3-7/: CMakeLists.txt  dictionary-implementation-testsuit.cpp  dictionary-implementation.hpp
chapter4/4-13/: solution.md
chapter4/4-14/: solution.md
chapter4/4-15/: solution.md
chapter4/4-16/: solution.md
chapter4/4-18/: solution.md
chapter4/4-19/: solution.md
chapter4/4-20/: solution.md
chapter4/4-23/: solution.md
chapter4/4-25/: solution.md
chapter4/4-28/: solution.md
chapter4/4-29/: solution.md
chapter4/4-30/: solution.md
chapter4/4-33/: solution.md
chapter4/4-41/: solution.md
chapter4/4-42/: solution.md
chapter4/4-44/: CMakeLists.txt
chapter4/4-44/apps/: CMakeLists.txt  bench.cpp
chapter4/4-44/include/: heap-sort.hpp  merge-sort.hpp  quick-sort.hpp  selection-sort.hpp  unique-words.hpp
chapter4/4-44/src/: file-utility.cpp  heap-sort.cpp  merge-sort.cpp  quick-sort.cpp  selection-sort.cpp  unique-words.cpp
chapter4/4-44/testsuits/: CMakeLists.txt  file-utility-testsuit.cpp  heap-sort-testsuit.cpp  merge-sort-testsuit.cpp  quick-sort-testsuit.cpp  selection-sort-testsuit.cpp  test-vector.cpp  test-vector.hpp  unique-words-testsuit.cpp
chapter4/4-45/: CMakeLists.txt
chapter4/4-45/include/: external-sort.hpp  file-heap.hpp  file-utility.hpp
chapter4/4-45/src/: external-sort.cpp  file-heap.cpp  file-utility.cpp
chapter4/4-45/testsuits/: CMakeLists.txt  external-sort-testsuit.cpp
chapter4/4-46/: CMakeLists.txt
chapter4/4-46/apps/: CMakeLists.txt  bench.cpp
chapter4/4-46/include/: merge-sort.hpp  parallel-sort.hpp
chapter4/4-46/src/: file-utility.cpp  merge-sort.cpp  parallel-sort.cpp
chapter4/4-46/testsuits/: CMakeLists.txt  parallel-sort-testsuit.cpp  test-vector.cpp  test-vector.hpp
chapter4/4-7/: solution.md
chapter5/5-4/: solution.md
chapter5/5-5/: solution.md
chapter5/5-6/: solution.md
chapter5/5-7/: solution.md
chapter5/leetcode-5-2/: solution.cpp
chapter7/7-10/: Solution.md
chapter7/7-11/: Solution.md
chapter7/7-15/: Solution.md
chapter7/7-16/: Solution.md
chapter7/7-17/: Solution.md
chapter7/7-18/: Solution.md
chapter7/7-21/: Solution.md
chapter7/7-22/: Solution.md
chapter7/7-23/: Solution.md
chapter7/7-5/: Solution.md
chapter7/7-7/: Solution.md
chapter7/7-8/: Solution.md
chapter7/7-9/: Solution.md
