add_executable(bench bench.cpp)
target_sources(bench PRIVATE ${CMAKE_SOURCE_DIR}/src/heap-sort.cpp)
target_sources(bench PRIVATE ${CMAKE_SOURCE_DIR}/src/merge-sort.cpp)
target_sources(bench PRIVATE ${CMAKE_SOURCE_DIR}/src/quick-sort.cpp)
target_sources(bench PRIVATE ${CMAKE_SOURCE_DIR}/src/selection-sort.cpp)
target_sources(bench PRIVATE ${CMAKE_SOURCE_DIR}/src/unique-words.cpp)
target_sources(bench PRIVATE ${CMAKE_SOURCE_DIR}/src/file-utility.cpp)
find_package(benchmark REQUIRED)
target_link_libraries(bench benchmark::benchmark)
target_include_directories(bench PRIVATE ${CMAKE_SOURCE_DIR}/include)
configure_file(${CMAKE_SOURCE_DIR}/sample-file/alice29.txt ${CMAKE_BINARY_DIR}/apps/sample-file/alice29.txt COPYONLY)
configure_file(${CMAKE_SOURCE_DIR}/sample-file/alice29.txt ${CMAKE_BINARY_DIR}/apps/sample-file/asyoulik.txt COPYONLY)
configure_file(${CMAKE_SOURCE_DIR}/sample-file/alice29.txt ${CMAKE_BINARY_DIR}/apps/sample-file/lcet10.txt COPYONLY)
configure_file(${CMAKE_SOURCE_DIR}/sample-file/alice29.txt ${CMAKE_BINARY_DIR}/apps/sample-file/plrabn12.txt COPYONLY)
